2004-11-17  Daniel Jacobowitz  <dan@codesourcery.com>

	* emultempl/armelf.em (arm_elf_set_bfd_for_interworking): Don't use
	a dynamic object for stubs.

2004-11-04  Paul Brook  <paul@codesourcery.com>

	* ld.texinfo: Document --default-imported-symver.
	* ldmain.c (main): Set link_info.default_imported_symver.
	* lexsup.c (option_values): Add OPTION_DEFAULT_IMPORTED_SYMVER.
	(ld_options): Add --default-imported-symver.
	(parse_args): Handle OPTION_DEFAULT_IMPORTED_SYMVER.

2004-11-08  Inderpreet Singh   <inderpreetb@nioda.hcltech.com>
	    Vineet Sharma      <vineets@noida.hcltech.com>

	* Makefile.am: Add entries for new maxq-coff target.
	* Makefile.in: Regenerate.
	* configure.tgt: Add support for maxq.
	* emulparams/maxqcoff.sh: New File.
	* scripttempl/maxqcoff.sc: New linker script for target maxq.
	* NEWS: Mention the new target.

2004-11-08  Aaron W. LaFramboise <aaron98wiridge9@aaronwl.com>

	* testsuite/ld-scripts/weak.exp: Enable test on PE,
	XFAIL non-i386 PE.
	* testsuite/ld-undefined/weak-undef.exp: Enable test on PE,
	XFAIL non-i386 PE.
	* testsuite/lib/ld-lib.exp (is_pecoff_format): New.

2004-11-04  Daniel Jacobowitz  <dan@debian.org>

	* Makefile.am (ALL_EMULATIONS): Remove earmelf_oabi.o.
	(earmelf_oabi.c): Remove rule.
	* configure.tgt: Remove arm-*-oabi and thumb-*-oabi.
	* emulparams/armelf_oabi.sh, emultempl/armelf_oabi.em: Delete files.
	* Makefile.in: Regenerated.

2004-11-04  Hans-Peter Nilsson  <hp@axis.com>

	* configure.tgt (crisv32-*-*): Handle like cris-*-* for non-aout.
	* emulparams/criself.sh (INIT_START): Remove emitted "push srp".
	(FINI_START): Ditto.
	(INIT_END): Remove emitted "jump [sp+]".
	(FINI_END): Ditto.

2004-11-04  Alan Modra  <amodra@bigpond.net.au>

	* emultempl/ppc64elf.em (no_tls_opt): Rename from notlsopt.
	(no_opd_opt, no_toc_opt): New static vars.
	(ppc_before_allocation): Don't edit opt if no_opd_opt.  Call
	ppc64_elf_edit_toc.
	(OPTION_NO_OPD_OPT, OPTION_NO_TOC_OPT): Define.